# molprint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: rdkit-env.yml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/molprint-core/: Cargo.toml
crates/molprint-core/benches/: smiles_parsing.rs
crates/molprint-core/src/: arom.rs  lib.rs  ring.rs
crates/molprint-core/src/mol/: atom.rs  bond.rs  graph.rs  mod.rs
crates/molprint-core/src/smarts/: ast.rs  lexer.rs  matcher.rs  mod.rs
crates/molprint-core/src/smiles/: lexer.rs  mod.rs  parser.rs
crates/molprint-fp/: Cargo.toml
crates/molprint-fp/benches/: fingerprints.rs
crates/molprint-fp/src/: bitvec.rs  lib.rs  maccs.rs  morgan.rs  traits.rs
crates/molprint-fp/tests/: validate_against_rdkit.rs
crates/molprint-io/: Cargo.toml
crates/molprint-io/src/: fps.rs  lib.rs  sdf.rs  smiles_file.rs
crates/molprint-search/: Cargo.toml
crates/molprint-search/benches/: similarity.rs
crates/molprint-search/src/: lib.rs  metrics.rs  screen.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  design-decisions.md  learnings.md
docs/src/architecture/: README.md  file-io.md  fingerprints.md  molecular-graph.md  overview.md  ring-perception.md  similarity-screening.md  smarts-engine.md  smiles-parser.md
docs/src/getting-started/: README.md  cli.md  library.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_smiles.rs
molprint-cli/: Cargo.toml
molprint-cli/src/: main.rs
molprint-py/: Cargo.toml
molprint-py/src/: lib.rs
molprint-py/tests/: test_bindings.py
scripts/: benchmark_rdkit.py  compare_benchmarks.py  corpus_validate.py  download_chembl_sample.py  dump_rdkit_maccs_keys.py  generate_reference.py
tests/: cli_integration.rs
