[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "molprint"
version = "0.1.0"
description = "High-performance molecular fingerprints and similarity search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["cheminformatics", "fingerprints", "smiles", "molecular", "similarity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.maturin]
manifest-path = "molprint-py/Cargo.toml"
python-source = "molprint-py"
features = ["pyo3/extension-module"]
