[package]
name = "molprint-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.molprint-core]
path = "../crates/molprint-core"

[[bin]]
name = "fuzz_smiles"
path = "fuzz_targets/fuzz_smiles.rs"
test = false
doc = false
